Update script source path in index.html

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 		<div class="club">©2026 My Innovation Team</div>
 		
 	</footer>
-	<script src="js/script.js"></script>
+	<script src="css/js/script.js"></script>
 </body>
 
   </html>
