--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 		<section id="reponse">
 			<h2>Déposez ici vos réponses en format PDF, document, image ou vidéo
 			</h2>
-			<form action="https://formspree.io/f/xaqqyqrj" method="post">
+			<form action="" method="">
 				<label for="reponses">Vos réponses (PDF, Document, Image,
 					vidéo) </label> <input type="file" name="reponses"
 					id="reponses" />
